coffeeshop: error codes and documentation
